--- a/protocol-samples/http-client-di-sample/pom.xml
+++ b/protocol-samples/http-client-di-sample/pom.xml
@@ -50,7 +50,7 @@
     <dependency>
       <groupId>org.fido.iot</groupId>
       <artifactId>storage-di-sample</artifactId>
-      <version>0.3</version>
+      <version>0.5-SNAPSHOT</version>
     </dependency>
 
     <dependency>
